--- a/src/app/components/ads/ads.component.scss
+++ b/src/app/components/ads/ads.component.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-row-gap: 50px;
-  align-items: center;
+  align-items: start;
 }
 
 .ad {
