--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -25,6 +25,7 @@
       <div *ngSwitchCase="'advertisements'"><app-profile-ads [author]="user$"></app-profile-ads></div>
       <div *ngSwitchCase="'favorites'"><app-profile-favorites [user]="user$"></app-profile-favorites></div>
       <div *ngSwitchCase="'comments'"><app-profile-comments [user]="user$"></app-profile-comments></div>
+      <div *ngSwitchCase="'admin'"><app-admin-panel ></app-admin-panel></div>
     
     </div>
     
