--- a/src/app/components/user-activate/user-activate.component.html
+++ b/src/app/components/user-activate/user-activate.component.html
@@ -1,6 +1,13 @@
 
-<div class="container">
-  <div class="title">
-    {{ message }}
+
+  
+
+  <div class="title__wrapper">
+    <div class="title__nav">
+      <a routerLink="/"><span nz-icon nzType="home" nzTheme="outline"></span> На главную</a>
+    </div>
+    <div class="title">
+      {{ message }}
+    </div>
   </div>
-</div>
+
