--- a/src/app/components/search-ads/search-ads.component.scss
+++ b/src/app/components/search-ads/search-ads.component.scss
@@ -5,6 +5,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 10px;
+
+  &__pagination {
+    text-align: center;
+  }
 }
 
 .ad {
